# discord_bot

./: Cargo.toml
src/: client.rs  consts.rs  error.rs  guild_state.rs  main.rs  queue.rs  utils.rs
src/audio/: mod.rs  source.rs  ytdlp.rs
src/commands/: mod.rs
src/commands/general/: age.rs  mod.rs  pfp.rs
src/commands/music/: info.rs  loop_cmd.rs  mod.rs  pause.rs  play.rs  resume.rs  skip.rs  stop.rs  volume.rs
src/commands/queue/: clear.rs  mod.rs  queue.rs  remove.rs  shuffle.rs  skip.rs
src/commands/voice/: join.rs  leave.rs  mod.rs
src/events/: error.rs  message.rs  mod.rs
src/telemetry/: mod.rs
