[package]
name = "discord_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
dashmap = "6.1.0"
dotenv = "0.15.0"
poise = "0.6.2"
rand = "0.10.1"
regex = "1.12.3"
reqwest = "0.12.28"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serenity = { version = "0.12.5", features = [
    "cache",
    "framework",
    "standard_framework",
    "voice",
    "http",
] }
songbird = { version = "0.6.0", features = [
    "serenity",
    "driver",
    "gateway",
    "builtin-queue",
    "receive",
] }
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["full"] }
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-bunyan-formatter = "0.3.10"
tracing-subscriber = "0.3.23"
uuid = { version = "1.23.1", features = ["v4"] }

[dependencies.symphonia]
version = "0.5.5"
features = ["all"]
